--- a/index.html
+++ b/index.html
@@ -1,16 +1,42 @@
 <DOCTYPE html>
 <html>
-  <head>
-  <title>HELLO</title>
-  <script type="text/javascript">
-  alert("Hii!")
+    <head>
+    <title>Happy Valentine's Day!</title>
+    <style>
+        body {
+            background-color: pink;
+    </style>
+    <script type="text/javascript">
+    alert("Hello!")
+    alert("Good Morning!")
+    alert("How's your day?")
+    alert("I'm not sure how to start this letter,")
+    alert("But I wanted you to know how much you meant to me and how proud and happy you made me feel.")
+    alert("You are constantly on my thoughts")
+    alert("and I can't stop thinking about you")
+    alert("Your beauty, your smile, everything.")
+    alert("These little things add up to how much i like you.")
+    alert("Although I am aware that you are still recovering from your past issue,")
+    alert("I want you to know that I am willing to wait.")
+    alert("You're one of the reasons why I wake up every morning with a smile on my face.")
+    alert("It's been 5 months since I liked you,")
+    alert("you brought me happiness and you've been an inspiration to me and I'm grateful for that.")
+    alert("I created this simple HTML File because I want it to be extraordinary.")
+    alert("This is my first time creating this,")
+    alert("I know it's not perfect because I'm still learning but I hope you like it :>")
+    alert("Kung gusto mo, ilibre taka anywhere u want,")
+    alert("Pwede man sa canteen or sa luwas. HEHE :>")
+
+    </script>
+    </head>
+
+    <body>
+    <h1
+    style="color:white;"> HAPPY VALENTINE'S DAY!</h1>
+
+    <img
+    src="C:\Users\evasc\Downloads\DSC_0080.png"
+    width="400" height="300"
 
 
-
-
-
-
-
-
-   </script>
-  </head>
+    </body>
